--- a/sass/_style.sass
+++ b/sass/_style.sass
@@ -100,9 +100,6 @@ header
     margin: 100px 0
     a[href]
         color: $header-link
-        &:active
-            background: $header-link
-            color: $text-color
         &.on
             background: $header-link
             color: $text-color
